# cue

./: .cue-profile  .gitignore  .gitmodules  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  get.sh  llms.txt  package.json  skills-lock.json  tsconfig.json
.agents/skills/hydra/: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.agents/skills/hydra/.claude/: settings.json
.agents/skills/hydra/.claude/hooks/: check-codex-freshness.sh
.agents/skills/hydra/bench/runner/: extract_findings.py  invoke_hydra_1x.py  run_bench.py  scoring.py
.agents/skills/hydra/docs/adr/: 0001-execution-substrate.md
.agents/skills/hydra/docs/gates/: part-2-2026-04-17.md
.agents/skills/hydra/docs/plans/: 2026-04-17-hydra-2.0-core.md
.agents/skills/hydra/docs/specs/: 2026-04-17-hydra-2.0-core-design-v1-rejected.md  2026-04-17-hydra-2.0-core-design-v2.md
.agents/skills/hydra/hydra/: __init__.py  budget.py  config.py  envelopes.py  path_safety.py  run_nonce.py  subprocess_safe.py
.agents/skills/hydra/hydra/phase1/: seed_ids.py
.agents/skills/hydra/hydra/phase1/tools/: semgrep.py
.agents/skills/hydra/references/: advisors.md  chairman-protocol.md  report-template.md  review-protocol.md
.agents/skills/hydra/tests/: conftest.py
.agents/skills/hydra/tests/integration/: test_codex_live.py
.agents/skills/hydra/tests/unit/: test_bench_scoring.py  test_budget.py  test_config_hash.py  test_envelopes.py  test_extract_findings.py  test_invoke_hydra_1x.py  test_path_containment.py  test_run_nonce.py  test_seed_ids.py  test_subprocess_safety.py  test_tool_semgrep.py
(+974 files in other folders)
