[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hydra-core"
version = "2.0.0a0"
requires-python = ">=3.12.3"
# Core deps only. anthropic + httpx are not yet imported anywhere in the
# package (Task 18 advisor runner will wire them in); keeping them in
# [llm] extra avoids false supply-chain signals and unnecessary install
# bloat for headless / agentic contexts.
dependencies = [
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
]
# Forward-contract for Phase-2 wiring (Task 18). Move into [project.dependencies]
# in the same commit that adds the first `import anthropic` / `import httpx`.
llm = [
  "anthropic>=0.45.0",
  "httpx>=0.27.0",
]
bench = [
  "gitpython>=3.1.43",
]

# Re-enable when hydra/cli.py lands (plan Task 42).
# `pip install -e .` succeeds today but `hydra` would fail at import.
# [project.scripts]
# hydra = "hydra.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["hydra"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["hydra"]
